# fledge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  init_package.py  pyproject.toml
.github/workflows/: run-pytest-on-master.yml
fledge/: __init__.py  connect.py  loftq.py
tests/: __init__.py  test_loftq.py
